Transferred all the JavaScript and CSS into the project's folder

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,8 +4,9 @@
 @import "./partials/typography";
 @import "./partials/baseStyles";
 
-
 @import "./partials/header";
 @import "./partials/form";
 @import "./partials/mainContent";
+@import "./partials/components";
+@import "./partials/animations";
 @import "./partials/mediaQueries";
