--- a/styles/sass/partials/_components.scss
+++ b/styles/sass/partials/_components.scss
@@ -10,6 +10,6 @@
   transition: background-color 0.3s ease;
 
   &:hover {
-    background-color: $octonary;
+    background-color: $secondary;
   }
 }
