--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,13 +333,13 @@ h2 {
 
 .genreSelect {
   font-size: 16px;
-  color: #222;
+  color: rgba(54, 75, 89, 0.8549019608);
   text-align: center;
   letter-spacing: 0.1rem;
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
-.genreSelect.genreSelect:hover {
+.genreSelect:hover {
   letter-spacing: 0.2rem;
   color: #bf6c6c;
 }
@@ -483,7 +483,7 @@ img {
 }
 
 .searchBtn:hover {
-  background-color: #0069d9;
+  background-color: rgba(54, 75, 89, 0.8549019608);
 }
 
 .mainContent {
@@ -501,7 +501,7 @@ img {
 }
 
 .movieCard {
-  background-color: #fff;
+  background-color: #ffffff;
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
@@ -548,7 +548,7 @@ img {
   transition: background-color 0.3s ease;
 }
 .goTopBtn:hover {
-  background-color: #0069d9;
+  background-color: rgba(54, 75, 89, 0.8549019608);
 }
 
 @-webkit-keyframes bounce {
