--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -21,7 +21,7 @@
   margin: 1.5rem 0;
 }
 
-/* Code courtesy of @ke1221 (some modification by Team JL)*/
+/* Code courtesy of @ke1221 (some modification by JL Team) */
 
 .headerBtn {
   color: $secondary;
