--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -12,9 +12,9 @@ $quaternary: #bf6c6c;
 $quinary: #e8e8e8;
 $senary: #c5c5c5;
 $septenary: #364b59da;
-$octonary: #0069d9;
+$octonary: rgb(216, 32, 32);
 
 // ==== SITE SOLID COLOURS ====
 $solidwhite: #ffffff;
-$solidblack: #0000;
+$solidblack: #000000;
 $solidgray: #979797;
