--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -12,7 +12,6 @@
   height: 40px;
 }
 
-// <--------- Search Form --------->
 .searchForm {
   display: flex;
   align-items: center;
@@ -38,8 +37,8 @@
   font-size: 16px;
   cursor: pointer;
   margin-bottom: 1.5rem;
-}
 
-.searchBtn:hover {
-  background-color: $octonary;
+  &:hover {
+    background-color: $secondary;
+  }
 }
