--- a/styles/sass/partials/_mainContent.scss
+++ b/styles/sass/partials/_mainContent.scss
@@ -18,6 +18,7 @@
   border-radius: 0.5rem;
   padding: 1rem;
   transition: transform 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .movieCard:hover {
@@ -30,20 +31,20 @@
   margin-bottom: 1rem;
 }
 
-.movieCard h2 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-  text-align: center;
+.movieTitle {
+  margin-bottom: .8rem;
 }
 
-.movieCard p {
+.movieOverview {
   font-size: 1rem;
-  line-height: 1.2;
   margin-bottom: 0.5rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.movieCard p {
-  font-size: 1rem;
-  line-height: 1.2;
-  margin-bottom: 0.5rem;
+.movieRating {
+  margin: .8rem 0 .6rem 0;
 }
