--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -7,6 +7,7 @@
 @import "./partials/header";
 @import "./partials/form";
 @import "./partials/mainContent";
+@import "./partials/modal";
 @import "./partials/components";
 @import "./partials/animations";
 @import "./partials/mediaQueries";
