--- a/styles/styles.css
+++ b/styles/styles.css
@@ -343,8 +343,7 @@ h2 {
   letter-spacing: 0.2rem;
   color: #bf6c6c;
 }
-
-.genreSelect > option {
+.genreSelect option {
   color: rgba(54, 75, 89, 0.8549019608);
   font-family: "Jakarta Sans";
   font-weight: 500;
@@ -353,12 +352,59 @@ h2 {
   font-size: 0.9rem;
 }
 
+.movieTitle {
+  font-family: "Young Serif";
+  text-align: center;
+  font-size: 22px;
+  font-size: 1.1rem;
+}
+
+.movieOverview {
+  line-height: 1.2;
+}
+
+.genreTitle {
+  font-family: "Young Serif";
+  line-height: 5rem;
+  letter-spacing: 0.1rem;
+  font-size: 50px;
+  font-size: 2.5rem;
+}
+
 .goTopBtn {
   color: #ffffff;
   font-weight: bold;
   cursor: pointer;
   font-size: 25px;
   font-size: 1.25rem;
+}
+
+.modalContentContainer {
+  color: #ffffff;
+}
+
+.modalTitle {
+  font-family: "Young Serif";
+  font-size: 25.6px;
+  font-size: 1.28rem;
+}
+
+.modalOverview {
+  line-height: 1.3rem;
+  letter-spacing: 0.1rem;
+  font-size: 20.8px;
+  font-size: 1.04rem;
+}
+
+.close {
+  color: #c5c5c5;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.close:hover, .close:focus {
+  color: #bf6c6c;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .wrapper {
@@ -415,7 +461,7 @@ img {
   margin: 1.5rem 0;
 }
 
-/* Code courtesy of @ke1221 (some modification by Team JL)*/
+/* Code courtesy of @ke1221 (some modification by JL Team) */
 .headerBtn {
   color: rgba(54, 75, 89, 0.8549019608);
   margin-right: 1rem;
@@ -481,9 +527,8 @@ img {
   cursor: pointer;
   margin-bottom: 1.5rem;
 }
-
 .searchBtn:hover {
-  background-color: #0069d9;
+  background-color: rgba(54, 75, 89, 0.8549019608);
 }
 
 .mainContent {
@@ -510,6 +555,7 @@ img {
   transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .movieCard:hover {
@@ -523,22 +569,70 @@ img {
   margin-bottom: 1rem;
 }
 
-.movieCard h2 {
+.movieTitle {
+  margin-bottom: 0.8rem;
+}
+
+.movieOverview {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.movieRating {
+  margin: 0.8rem 0 0.6rem 0;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modalContentContainer {
+  background-color: #000000;
+  border: 8px solid #c5c5c5;
+  max-width: 35%;
+  position: relative;
+  padding: 3rem 2rem 0 2rem;
+}
+
+.modalTitle {
+  background-color: rgb(216, 32, 32);
+  width: 100%;
+  padding: 0.2rem 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.modalOverview {
+  margin-bottom: 2rem;
+}
+
+.modalRating {
   font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-  text-align: center;
+  margin-bottom: 1.5rem;
 }
 
-.movieCard p {
-  font-size: 1rem;
-  line-height: 1.2;
-  margin-bottom: 0.5rem;
-}
-
-.movieCard p {
-  font-size: 1rem;
-  line-height: 1.2;
-  margin-bottom: 0.5rem;
+.close {
+  position: absolute;
+  top: -12px;
+  right: 10px;
 }
 
 .goTopBtn {
@@ -554,7 +648,7 @@ img {
   transition: background-color 0.3s ease;
 }
 .goTopBtn:hover {
-  background-color: #0069d9;
+  background-color: rgba(54, 75, 89, 0.8549019608);
 }
 
 @-webkit-keyframes bounce {
@@ -586,7 +680,7 @@ img {
             transform: translateY(-10px);
   }
 }
-.goTopBtn .goTopIcon {
+.goTopIcon {
   padding: 18px 0 0 16px;
   -webkit-animation-name: bounce;
           animation-name: bounce;
