Added the MediaQueries for the site and the modal

--- a/styles/sass/partials/_modal.scss
+++ b/styles/sass/partials/_modal.scss
@@ -13,7 +13,6 @@
 }
 
 .modalContentContainer {
-
   background-color: $solidblack;
   border: 8px solid $senary;
   max-width: 35%;
@@ -24,7 +23,7 @@
 .modalTitle {
   background-color: $octonary;
   width: 100%;
-  padding: .2rem .5rem;
+  padding: 0.2rem 0.5rem;
   margin-bottom: 1rem;
 }
 
