--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,16 +1,78 @@
-// landscape phones and down
-@media (max-width: 480px) {
-    header {
-        .mainHeader {
-            height: 80vh;
-            
-            h1 {
-                text-align: center;
-            }
+@media screen and (max-width: 768px) {
+  .modalContentContainer {
+    max-width: 90%;
+    padding: 3rem 1rem;
+  }
 
-            .buttonsContainer {
-                display: flex;
-            }
-        }
+  .modalTitle {
+    padding: 0.2rem 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .modalOverview {
+    margin-bottom: 1rem;
+  }
+
+  .modalRating {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .close {
+    top: -8px;
+    right: 8px;
+  }
+}
+
+@media screen and (max-width: 594px) {
+  .mainHeader {
+    & h1 {
+      @include fontSize(60);
     }
+  }
+
+  .genreTitle {
+    text-align: center;
+    @include fontSize(50);
+  }
+}
+
+@media screen and (max-width: 535px) {
+  .mainHeader {
+    height: 55vh;
+    & h1 {
+      margin-top: 1rem;
+      @include fontSize(52);
+    }
+  }
+
+  .buttonsContainer {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    gap: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 454px) {
+  .buttonsContainer {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 354px) {
+  .mainHeader {
+    & h2,
+    & p {
+      text-align: center;
+    }
+
+    & .wrapper {
+      width: 88%;
+    }
+  }
+
+  .searchForm {
+    width: 90%;
+  }
 }
