--- a/styles/styles.css
+++ b/styles/styles.css
@@ -448,13 +448,25 @@ img {
   color: #222;
   padding: 13rem 0;
 }
-
 .mainHeader h1 {
   margin-bottom: 1rem;
+  text-align: center;
+  width: 100%;
 }
-
 .mainHeader h2 {
   margin-bottom: 0.5rem;
+}
+.mainHeader .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .buttonsContainer {
@@ -475,7 +487,6 @@ img {
   -webkit-box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
           box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
 }
-
 .headerBtn:active {
   color: #bf6c6c;
   -webkit-box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
@@ -692,16 +703,72 @@ img {
           animation-iteration-count: infinite;
 }
 
-@media (max-width: 480px) {
-  header .mainHeader {
-    height: 80vh;
+@media screen and (max-width: 768px) {
+  .modalContentContainer {
+    max-width: 90%;
+    padding: 3rem 1rem;
   }
-  header .mainHeader h1 {
+  .modalTitle {
+    padding: 0.2rem 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .modalOverview {
+    margin-bottom: 1rem;
+  }
+  .modalRating {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .close {
+    top: -8px;
+    right: 8px;
+  }
+}
+@media screen and (max-width: 594px) {
+  .mainHeader h1 {
+    font-size: 60px;
+    font-size: 3rem;
+  }
+  .genreTitle {
     text-align: center;
+    font-size: 50px;
+    font-size: 2.5rem;
   }
-  header .mainHeader .buttonsContainer {
+}
+@media screen and (max-width: 535px) {
+  .mainHeader {
+    height: 55vh;
+  }
+  .mainHeader h1 {
+    margin-top: 1rem;
+    font-size: 52px;
+    font-size: 2.6rem;
+  }
+  .buttonsContainer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 70%;
+    gap: 0.8rem;
+  }
+}
+@media screen and (max-width: 454px) {
+  .buttonsContainer {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 354px) {
+  .mainHeader h2, .mainHeader p {
+    text-align: center;
+  }
+  .mainHeader .wrapper {
+    width: 88%;
+  }
+  .searchForm {
+    width: 90%;
   }
 }
