Created the html footer and the footer's sass partial. Also, added the styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -598,6 +598,29 @@ img {
   margin: 0.8rem 0 0.6rem 0;
 }
 
+footer {
+  background-color: #f8f8f8;
+  padding: 10px;
+  text-align: center;
+}
+
+.footerContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footerContent span {
+  font-weight: bold;
+  font-style: italic;
+  margin-right: 0.1rem;
+}
+
 .modal {
   display: none;
   position: fixed;
