--- a/styles/styles.css
+++ b/styles/styles.css
@@ -608,14 +608,17 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
-
-.footerContent span {
+.footerContainer .copyright {
+  margin-left: 6rem;
+}
+.footerContainer span {
   font-weight: bold;
   font-style: italic;
   margin-right: 0.1rem;
