--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -39,7 +39,6 @@
 
 @media screen and (max-width: 535px) {
   .mainHeader {
-    height: 55vh;
     & h1 {
       margin-top: 1rem;
       @include fontSize(52);
@@ -55,6 +54,10 @@
 }
 
 @media screen and (max-width: 454px) {
+  .mainHeader {
+    padding: 12rem 0;
+  }
+
   .buttonsContainer {
     width: 100%;
   }
@@ -62,6 +65,7 @@
 
 @media screen and (max-width: 354px) {
   .mainHeader {
+
     & h2,
     & p {
       text-align: center;
