--- a/styles/styles.css
+++ b/styles/styles.css
@@ -729,6 +729,16 @@ footer {
           animation-iteration-count: infinite;
 }
 
+@media screen and (max-width: 412px) and (max-height: 915px) {
+  .mainHeader {
+    height: 80vh;
+  }
+}
+@media screen and (max-height: 844px) {
+  .mainHeader {
+    height: 93vh;
+  }
+}
 @media screen and (max-width: 768px) {
   .modalContentContainer {
     max-width: 90%;
